--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,15 +39,16 @@
           <%= f.submit "Update", class: "btn btn-primary" %>
         </div>
         <% end %>
+
+        <hr>
+
+        <div class="center" id="delete-account">
+          <p><%= button_to "Delete this account", registration_path(resource_name), data: { confirm: "Are you sure? This can not be undone" }, method: :delete, class: "btn btn-danger" %></p>
+        </div>
+
       </div>
 
     </div>
 
   </div>
 </div>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
